syntax = "proto3";

package penumbra.core.chain.v1alpha1;

import "penumbra/core/crypto/v1alpha1/crypto.proto";
import "penumbra/core/stake/v1alpha1/stake.proto";
import "penumbra/core/dex/v1alpha1/dex.proto";

// Global chain configuration data, such as chain ID, epoch duration, etc.
message ChainParameters {
  // The identifier of the chain.
  string chain_id = 1;
  // The duration of each epoch, in number of blocks.
  uint64 epoch_duration = 2;

  // The number of epochs an unbonding note for before being released.
  uint64 unbonding_epochs = 3;
  // The maximum number of validators in the consensus set.
  uint64 active_validator_limit = 4;
  // The base reward rate, expressed in basis points of basis points
  uint64 base_reward_rate = 9;
  // The penalty for slashing due to misbehavior.
  uint64 slashing_penalty_misbehavior = 5;
  // The penalty for slashing due to downtime.
  uint64 slashing_penalty_downtime = 10;
  // The number of blocks in the window to check for downtime.
  uint64 signed_blocks_window_len = 11;
  // The maximum number of blocks in the window each validator can miss signing without slashing.
  uint64 missed_blocks_maximum = 12;

  // Whether IBC (forming connections, processing IBC packets) is enabled.
  bool ibc_enabled = 6;
  // Whether inbound ICS-20 transfers are enabled
  bool inbound_ics20_transfers_enabled = 7;
  // Whether outbound ICS-20 transfers are enabled
  bool outbound_ics20_transfers_enabled = 8;

  // The number of blocks during which a proposal is voted on.
  uint64 proposal_voting_blocks = 20;
  // The deposit required to create a proposal.
  uint64 proposal_deposit_amount = 21;
  // The quorum required for a proposal to be considered valid, as a fraction of the total stake
  // weight of the network.
  string proposal_valid_quorum = 22;
  // The threshold for a proposal to pass voting, as a ratio of "yes" votes over "no" votes.
  string proposal_pass_threshold = 23;
  // The threshold for a proposal to be slashed, regardless of whether the "yes" and "no" votes
  // would have passed it, as a ratio of "no" votes over all total votes.
  string proposal_slash_threshold = 24;

  // Whether DAO spend proposals are enabled.
  bool dao_spend_proposals_enabled = 25;
}

// The ratio between two numbers, used in governance to describe vote thresholds and quorums.
message Ratio {
  // The numerator.
  uint64 numerator = 1;
  // The denominator.
  uint64 denominator = 2;
}

// Parameters for Fuzzy Message Detection
message FmdParameters {
  uint32 precision_bits = 1;
  uint64 as_of_block_height = 2;
}

// TODO: delete with legacy code
// Information about a given asset at a given time (as specified by block
// height). Currently this only contains the total supply.
message AssetInfo {
  crypto.v1alpha1.AssetId asset_id = 1;
  crypto.v1alpha1.Denom denom = 2;
  uint64 as_of_block_height = 3;
  uint64 total_supply = 4;
}

// Contains the minimum data needed to update client state.
message CompactBlock {
  uint64 height = 1;
  // State payloads describing new state fragments.
  repeated StatePayload state_payloads = 2;
  // Nullifiers identifying spent notes.
  repeated crypto.v1alpha1.Nullifier nullifiers = 3;
  // The block root of this block.
  crypto.v1alpha1.MerkleRoot block_root = 4;
  // The epoch root of this epoch (only present when the block is the last in an epoch).
  crypto.v1alpha1.MerkleRoot epoch_root = 17;
  // If a proposal started voting in this block, this is set to `true`.
  bool proposal_started = 20;
  // Latest Fuzzy Message Detection parameters.
  FmdParameters fmd_parameters = 100;
  // Price data for swaps executed in this block.
  repeated dex.v1alpha1.BatchSwapOutputData swap_outputs = 5;
  // Updated chain parameters, if they have changed.
  chain.v1alpha1.ChainParameters chain_parameters = 6;
}

message StatePayload {
  message RolledUp {
    crypto.v1alpha1.StateCommitment commitment = 1;
  }
  message Note {
    NoteSource source = 1;
    crypto.v1alpha1.NotePayload note = 2;
  }
  message Swap {
    NoteSource source = 1;
    dex.v1alpha1.SwapPayload swap = 2;
  }
  message Position {
    dex.v1alpha1.LpNft lp_nft = 2;
    crypto.v1alpha1.StateCommitment commitment = 1;
  }
  oneof state_payload {
    RolledUp rolled_up = 1;
    Note note = 2;
    Swap swap = 3;
    Position position = 4;
  }
}

message KnownAssets {
  repeated crypto.v1alpha1.Asset assets = 1;
}

// A spicy transaction ID
message NoteSource {
  bytes inner = 1;
}

// A NoteSource paired with the height at which the note was spent
message SpendInfo {
  NoteSource note_source = 1;
  uint64 spend_height = 2;
}

message GenesisAppState {
    message Allocation {
        uint64 amount = 1;
        string denom = 2;
        crypto.v1alpha1.Address address = 3;
    }

    ChainParameters chain_params = 1;
    repeated stake.v1alpha1.Validator validators = 2;
    repeated Allocation allocations = 3;
}
